samples/_failures_safe/1761660563_18e356_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_96485d60.c: In function ‘main’:
./samples/SAFE/__tmp_96485d60.c:148:9: error: expected declaration or statement at end of input
  148 |         printf("Invalid level specified\n");
      |         ^~~~~~
./samples/SAFE/__tmp_96485d60.c:148:9: error: expected declaration or statement at end of input
